--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-489.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-549.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-394.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-351.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-183.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-421.6KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-397.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-474.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-3.64MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
