--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-394.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-351.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-183.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-421.6KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇩🇪 德国-2.68MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-474.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇫🇷 法国-3.06MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-3.64MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-284.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.75MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2, server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
