--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.68MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-474.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇫🇷 法国-3.06MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-284.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
+  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-490.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.75MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
