--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
-  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-490.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.22MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-452.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-1.75MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
